# laojieRiver

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
design-system/laojie-river/: MASTER.md  implementation-notes.md
design-system/laojie-river/pages/: dashboard.md
docs/: PRD.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard_commands.rs  item_commands.rs  mod.rs  settings_commands.rs  vault_commands.rs
src-tauri/src/core/: crypto.rs  errors.rs  mod.rs  password_generator.rs  session.rs  storage.rs  totp.rs  vault.rs
src-tauri/src/platform/: keychain.rs  macos.rs  mod.rs  windows.rs
src/lib/components/ui/badge/: Badge.svelte
src/lib/components/ui/button/: Button.svelte
src/lib/components/ui/input/: Input.svelte
src/lib/components/vault/: VaultEmptyState.svelte  VaultShell.svelte
src/lib/features/: demoMode.ts
src/lib/features/settings/: sections.ts
src/lib/features/splitPane/: SplitPaneSeparator.svelte  createSplitPane.svelte.ts
src/lib/features/vault/: api.ts  demoItems.ts  emptyStates.ts  navigation.ts  types.ts
src/lib/styles/: tokens.css
src/lib/utils/: cn.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/unlock/: +page.svelte
src/routes/vault/: +layout.svelte  +page.svelte
