[package]
name = "laojie-river"
version = "0.1.0"
description = "LaoJie River desktop vault"
authors = ["LaoJie River"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "laojie_river_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
thiserror = "2"

